# routes/api/auth.php
@@ -3,10 +3,11 @@
 use App\Http\Controllers\Api\Auth\AuthController;
 
 Route::prefix('auth')->group(function () {
+    Route::post('registration', [AuthController::class, 'registration']);
     Route::post('login', [AuthController::class, 'login']);
 
     Route::middleware('auth:api')->group(function () {
-        Route::get('me', [AuthController::class, 'me']);
+        Route::get('profile', [AuthController::class, 'profile']);
         Route::post('logout', [AuthController::class, 'logout']);
         Route::post('refresh', [AuthController::class, 'refresh']);
     });
