# routes/api/v1/routes.php
@@ -2,7 +2,6 @@
 
 use App\Http\Controllers\Api\V1\{
     RenterController,
-    VehicleController,
 };
 use Illuminate\Support\Facades\Route;
 
@@ -12,13 +11,6 @@ Route::middleware('auth:api')->prefix('v1')->group(function () {
         Route::get('/history', [RenterController::class, 'rentalHistory']);
         Route::get('/operations', [RenterController::class, 'operationsHistory']);
         Route::patch('/balance', [RenterController::class, 'updateBalance']);
-    });
-
-    Route::prefix('vehicles')->group(function () {
-        Route::get('/availables', [VehicleController::class, 'availables']);
-        Route::get('{id}', [VehicleController::class, 'item']);
-        Route::patch('{id}/status', [VehicleController::class, 'updateStatus']);
-        Route::patch('{id}/location', [VehicleController::class, 'updateLocation']);
     });
 });
 
